le ingrese un nuevo titulo

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <p> <h2>mi pagina prueba con html</h2></p>
-    <p> por bruno </p>
+        <header>
+            <h1> le agrego un titulo</h1>
+        </header>
 </body>
 </html>
